test/parse/module/bad-import-func-not-result.txt
;;; ERROR: 1
(module (import "foo" "bar" (func (param i32) (resalt i32))))
(;; STDERR ;;;
out/test/parse/module/bad-import-func-not-result.txt:2:48: error: unexpected token "resalt", expected param or result.
(module (import "foo" "bar" (func (param i32) (resalt i32))))
                                               ^^^^^^
;;; STDERR ;;)
